2007-10-19 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c: fixed bug #983491 - "Merge duplicate strings
	  function is ineffective" for pic16 tareget
	* support/scripts/listerr.c: corrected include path 
	* device/lib/_itoa.c: fixed bug #1806402 - _itoa and _uitoa leak to
	  adjacent memory

2007-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/using.c: new, added
	* support/regression/tests/vaargs.c: fixed and enabled test

2007-10-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c: fixed bug #983491 - Merge duplicate strings function
	  is ineffective
	* support/regression/tests/bug-983491.c: added regtest for bug #983491

2007-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented option --Werror
	* src/SDCCsymt.c (checkFunction): fixed bug 1815418 by setting
	  RegBankUsed[] earlier

2007-10-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/p89lpc938.h: new, added, thanks Kyle Guinn
	* src/pic/glue.c,
	* src/SDCCval.c,
	* src/SDCCast.c,
	* src/SDCCast.h: replaced AST_LIT_VALUE with AST_FLOAT_VALUE and
	  AST_ULONG_VALUE
	* src/SDCCast.c (decorateType): improved optimization of tri-op
	* src/SDCCerr.c (vwerror, setWError),
	* src/SDCCerr.h,
	* src/SDCCmain.c (parseCmdLine): added option --Werror to treat all
	  warnings as errors, thanks Stas Sergeev for PATCH 1813211

2007-10-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (leftRightUseAcc): use macro IS_OP_ACCUSE
	* src/SDCCast.c (decorateType): optimize bit=cond?1:0, RFE 1738430
	* support/regression/tests/bug-223113.c,
	* support/regression/tests/bug-426632.c,
	* support/regression/tests/bug-468811.c,
	* support/regression/tests/bug-477835.c,
	* support/regression/tests/bug-478094.c,
	* support/regression/tests/bug-499644.c,
	* support/regression/tests/bug-524209.c,
	* support/regression/tests/bug-524211.c,
	* support/regression/tests/packcast.c,